--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 
-    <title>Quasar App</title>
+    <title>Data-Wallet TravelChain</title>
     <link rel="icon" href="/statics/quasar-logo.png" type="image/x-icon">
     <link rel="stylesheet" href="/statics/font-awesome.min.css">
   </head>
